tests/compile-fail/Rule_2_1.rs
#[deny(unreachable_code)]

fn main() {
    let x: u16;
    return;
    x = 3; //~ ERROR unreachable statement
}
